Fix padding on details heading on smaller devices

--- a/components/Content.module.scss
+++ b/components/Content.module.scss
@@ -562,7 +562,8 @@
   .headerWithImage {
     .headerInner {
       .details {
-        padding: 0;
+        padding-left: 0;
+        padding-right: 0;
       }
     }
   }
